@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11722 2012/12/10 12:08:06 ryoon Exp $
+$NetBSD: TODO,v 1.11723 2012/12/10 16:47:45 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1038,7 +1038,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-trueskill-0.2.1
 	o py-urwid-1.1.0
 	o py-virtualenv-1.8.4
-	o python33-3.3.0
 	o qbrew-0.3.9
 	o qemu-1.3.0
 	o qiv-2.2.4 [pkg/46167]
